# ChessEngine

./: .gitignore  CMakeLists.txt  main.py  requirements.txt  setup.py
engine/: board.pyx  engine.py  piece.pyx
include/config/: Config.hpp
include/core/: Bitboard.hpp  Board.hpp  Game.hpp  Piece.hpp  board.hpp  color.hpp  game.hpp  piece.hpp
include/gui/: AIGameWindow.hpp  Application.hpp  MenuWindow.hpp  PlayerGameWindow.hpp  Window.hpp  WindowManager.hpp  application.hpp  scene.hpp  window.hpp
include/utils/: SDLUtils.hpp  Utils.hpp
lib/config/: Config.cpp  config.cpp
lib/core/: Board.cpp  Game.cpp  Piece.cpp  board.cpp  game.cpp  piece.cpp
lib/gui/: Application.cpp  MenuWindow.cpp  PlayerGameWindow.cpp  WindowManager.cpp
lib/utils/: SDLUtils.cpp  Utils.cpp  utils.cpp
src/: main.cpp
tests/: test_board.cpp  test_piece.cpp  test_utils.cpp
view/: game.py  view.py
